--- a/src/scss/general.css
+++ b/src/scss/general.css
@@ -6,26 +6,26 @@
 body {
   width: 100vw;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  overflow: hidden;
 }
 
-body .slider {
-  width: 85vw;
+body .container-mine {
+  width: 100vw;
+  margin: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+body .container-mine .slider {
+  width: 100%;
   position: relative;
   overflow: hidden;
 }
 
-body .slider .slider-wrapper {
+body .container-mine .slider .slider-wrapper {
   position: relative;
-  left: calc(50% - 100px - 2vw);
+  min-height: 600px;
+  left: calc(50% - 230px);
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -43,65 +43,286 @@ body .slider .slider-wrapper {
   transition: all .6s ease-out;
 }
 
-body .slider .slider-wrapper .card {
-  width: 200px;
-  height: 200px;
+body .container-mine .slider .slider-wrapper .card {
+  width: 220px;
+  height: 220px;
   margin: 0 2vw;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
 
-body .slider .slider-wrapper .card img {
+body .container-mine .slider .slider-wrapper .card img {
+  -webkit-box-shadow: 0 6px 21px -7px black;
+          box-shadow: 0 6px 21px -7px black;
   width: 100%;
   height: 100%;
+  -webkit-transition: -webkit-box-shadow .6s ease-out;
+  transition: -webkit-box-shadow .6s ease-out;
+  transition: box-shadow .6s ease-out;
+  transition: box-shadow .6s ease-out, -webkit-box-shadow .6s ease-out;
 }
 
-body .slider .active-slide-0 .card-0 {
+body .container-mine .slider .active-slide-0 .card-0 {
   opacity: 1;
-  width: 300px;
-  height: 300px;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-1 .card-1 {
+body .container-mine .slider .active-slide-0 .card-0 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-0 .card--1, body .container-mine .slider .active-slide-0 .card-1 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-0 .card--1 img, body .container-mine .slider .active-slide-0 .card-1 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-1 .card-1 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-2 .card-2 {
+body .container-mine .slider .active-slide-1 .card-1 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-1 .card-0, body .container-mine .slider .active-slide-1 .card-2 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-1 .card-0 img, body .container-mine .slider .active-slide-1 .card-2 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-2 .card-2 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-3 .card-3 {
+body .container-mine .slider .active-slide-2 .card-2 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-2 .card-1, body .container-mine .slider .active-slide-2 .card-3 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-2 .card-1 img, body .container-mine .slider .active-slide-2 .card-3 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-3 .card-3 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-4 .card-4 {
+body .container-mine .slider .active-slide-3 .card-3 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-3 .card-2, body .container-mine .slider .active-slide-3 .card-4 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-3 .card-2 img, body .container-mine .slider .active-slide-3 .card-4 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-4 .card-4 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-5 .card-5 {
+body .container-mine .slider .active-slide-4 .card-4 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-4 .card-3, body .container-mine .slider .active-slide-4 .card-5 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-4 .card-3 img, body .container-mine .slider .active-slide-4 .card-5 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-5 .card-5 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
 }
 
-body .slider .active-slide-6 .card-6 {
+body .container-mine .slider .active-slide-5 .card-5 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-5 .card-4, body .container-mine .slider .active-slide-5 .card-6 {
   opacity: 1;
   width: 300px;
   height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-5 .card-4 img, body .container-mine .slider .active-slide-5 .card-6 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-6 .card-6 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
   margin: 0 0vw;
+}
+
+body .container-mine .slider .active-slide-6 .card-6 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-6 .card-5, body .container-mine .slider .active-slide-6 .card-7 {
+  opacity: 1;
+  width: 300px;
+  height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-6 .card-5 img, body .container-mine .slider .active-slide-6 .card-7 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-7 .card-7 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
+  margin: 0 0vw;
+}
+
+body .container-mine .slider .active-slide-7 .card-7 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-7 .card-6, body .container-mine .slider .active-slide-7 .card-8 {
+  opacity: 1;
+  width: 300px;
+  height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-7 .card-6 img, body .container-mine .slider .active-slide-7 .card-8 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-8 .card-8 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
+  margin: 0 0vw;
+}
+
+body .container-mine .slider .active-slide-8 .card-8 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-8 .card-7, body .container-mine .slider .active-slide-8 .card-9 {
+  opacity: 1;
+  width: 300px;
+  height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-8 .card-7 img, body .container-mine .slider .active-slide-8 .card-9 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-9 .card-9 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
+  margin: 0 0vw;
+}
+
+body .container-mine .slider .active-slide-9 .card-9 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-9 .card-8, body .container-mine .slider .active-slide-9 .card-10 {
+  opacity: 1;
+  width: 300px;
+  height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-9 .card-8 img, body .container-mine .slider .active-slide-9 .card-10 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
+}
+
+body .container-mine .slider .active-slide-10 .card-10 {
+  opacity: 1;
+  width: 460px;
+  height: 460px;
+  margin: 0 0vw;
+}
+
+body .container-mine .slider .active-slide-10 .card-10 img {
+  -webkit-box-shadow: 0px 15px 30px -13px #000000;
+          box-shadow: 0px 15px 30px -13px #000000;
+}
+
+body .container-mine .slider .active-slide-10 .card-9, body .container-mine .slider .active-slide-10 .card-11 {
+  opacity: 1;
+  width: 300px;
+  height: 300px;
+  margin: 0 1vw;
+}
+
+body .container-mine .slider .active-slide-10 .card-9 img, body .container-mine .slider .active-slide-10 .card-11 img {
+  -webkit-box-shadow: 0px 7px 25px -9px #000000;
+          box-shadow: 0px 7px 25px -9px #000000;
 }
 /*# sourceMappingURL=general.css.map */
